position the navigation to stretch left and right and and fix the checked label to properly display navigation when checked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
 body, html {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    width: 100%;
 }
 /* display flex for header to align both sections */
 #header-section {
@@ -127,8 +129,7 @@ body, html {
         border: 2px solid blue;
         display: flex;
         flex-direction: row;
-        gap: 1rem;
-        aling-items:
+    
     }
     .logo > div {
         display: flex;
@@ -143,6 +144,7 @@ body, html {
         margin-top: 1rem;
         width: 30vw;
         gap: 2rem;
+        border: 2px solid red;
     }
     /* search bar icon */
     #search {
@@ -214,12 +216,12 @@ body, html {
     }
     /* nav with class nvaigation */
     .navigation {
-        right: -0.1rem;
         border: 2px solid blue;
         width: 100%;
         height: 70%;
         background-color: #000000;
-       
+        box-sizing: border-box;
+        left: 0.5px;
     }
     .navigation ul {
         list-style-type: none;
@@ -245,7 +247,23 @@ body, html {
     .shop-nav {
         position: absolute;
         top: 5rem;
-        left: 20rem;
+        left: 0.1px;
+        width: 100%;
+        height: 70%;
+    
+
+    }
+    .shop-nav ul {
+        display: flex;
+        flex-direction: row;
+        list-style-type: none;
+        border: 2px solid blue;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        gap:
+    
+
     }
 
 }
